Added the AlloyFinger library to handle touch events.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- <script src="lib/Touchy.min.js"></script> -->
 
     <!-- <script src="node_modules/FileSaver/FileSaver.js"></script>
-    <script src="node_modules/touchy/touchy.js"></script> -->
+	 <script src="node_modules/touchy/touchy.js"></script> -->
+    <script src="node_modules/alloyfinger/alloy_finger.js"></script>
     <script src="node_modules/dat.gui/build/dat.gui.min.js"></script>
 
     <script src="node_modules/plotboilerplate/src/js/utils/dat.gui.title.polyfill.js"></script>
